# pstat

./: Cargo.toml  README.md
crates/pstat/: Cargo.toml
crates/pstat-core/: Cargo.toml
crates/pstat-core/src/: collector.rs  diff.rs  lib.rs  local.rs  proc_parser.rs  remote.rs  report.rs  schema.rs
crates/pstat/src/: main.rs
