[workspace]
members = [
    "crates/pstat-core",
    "crates/pstat",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
ctrlc = "3.4"
humansize = "2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
panic = "abort"
strip = true
lto = "thin"

[workspace.lints.clippy]
complexity = "warn"
perf = "warn"
