[package]
name = "pstat"
description = "Process stat collection CLI — snapshot, sample, diff, discover, report"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
ctrlc.workspace = true
humansize.workspace = true
pstat-core = { path = "../pstat-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
